--- a/src/stembotx2_description/CMakeLists.txt
+++ b/src/stembotx2_description/CMakeLists.txt
@@ -7,9 +7,17 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(rclpy REQUIRED)
 find_package(urdf REQUIRED)
-
+# uncomment the following section in order to fill in
+# further dependencies manually.
+# find_package(<dependency> REQUIRED)
+install(DIRECTORY
+  launch
+  meshes
+  urdf
+  rviz
+  DESTINATION share/${PROJECT_NAME}
+)
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
@@ -21,10 +29,5 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
-
-install(
-  DIRECTORY launch urdf rviz
-  DESTINATION share/${PROJECT_NAME}
-)
 
 ament_package()
