--- a/src/stembotx2_description/package.xml
+++ b/src/stembotx2_description/package.xml
@@ -6,13 +6,16 @@
   <description>TODO: Package description</description>
   <maintainer email="koushik20040804@gmail.com">koushik</maintainer>
   <license>TODO: License declaration</license>
-  
+
   <buildtool_depend>ament_cmake</buildtool_depend>
-    <exec_depend>joint_state_publisher</exec_depend>
-    <exec_depend>robot_state_publisher</exec_depend>
-    <exec_depend>rviz2</exec_depend>
-    <exec_depend>xacro</exec_depend>
-    <export>
-        <build_type>ament_cmake</build_type>
-    </export>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+  <exec_depend>joint_state_publisher</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>rviz2</exec_depend>
+  <exec_depend>xacro</exec_depend>
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
